--- a/resources/sass/calendar/top_follower.scss
+++ b/resources/sass/calendar/top_follower.scss
@@ -110,7 +110,6 @@
 .reset_preview_date {
     font-size: 0.9rem;
     width: 100%;
-    height: 100%;
     padding: 0.2rem;
     text-align: center;
     margin: 0.3rem;
